--- a/HomeAdvantage.ipynb
+++ b/HomeAdvantage.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "61b095fc-f530-400a-9419-ee16317ea050",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/acherm/SEAI4Sport/blob/main/HomeAdvantage.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c79b2ff-95f9-4299-8098-89c0eac83151",
    "metadata": {},
    "source": [
@@ -333,6 +341,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ba278b9d-a934-4003-9e04-3eaa20dfae28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40c74673-5689-4aed-bf95-7c3d2e31e405",
    "metadata": {},
    "outputs": [],
    "source": []
