--- a/LLM_repeat.ipynb
+++ b/LLM_repeat.ipynb
@@ -823,6 +823,61 @@
     " #           \"What will be the women's 800 meter run world record by the year 2036?\",\n",
     " #           \"What will be the women's 800 meter run world record by the year 2040?\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Montrer la sensibilité des LLMs, en répétant les réponses à des prompts, sur des questions de santé/performance "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Montrer la robustesse des LLMs, en répétant les réponses à des prompts, sur des questions de santé/performance "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Montrer la cohérence ou la non-cohérence des LLMs sur des prédictions dans le temps… demander, par exemple, la prévision du record du monde de 800m féminin en 2026, 2030, 2040, 2050.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # \"What will be the women's 800 meter run world record by the year 2025?\",\n",
+    " #           \"What will be the women's 800 meter run world record by the year 2028?\",\n",
+    " #           \"What will be the women's 800 meter run world record by the year 2032?\",\n",
+    " #           \"What will be the women's 800 meter run world record by the year 2036?\",\n",
+    " #           \"What will be the women's 800 meter run world record by the year 2040?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
