--- a/LLM_repeat.ipynb
+++ b/LLM_repeat.ipynb
@@ -878,6 +878,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemple pour BPCO\n",
+    "prompt = \"Si j’ai des patients BPCO sévères d’un point de vue respiratoire (grade D), mais qu’ils ont une bonne force musculaire (force du quadriceps environ 90% des valeurs normales), est ce qu’il est quand même important de faire du renforcement musculaire ?\"\n",
+    "\n",
+    "csv_path, df = run_sensitivity_experiment(\n",
+    "    prompt=prompt,\n",
+    "    model=\"moonshotai/kimi-k2-instruct\", # ou llama-3.1-8b-instant or openai/gpt-oss-20b\t \n",
+    "    temperature=0.8,\n",
+    "    max_tokens=1000,\n",
+    "    n_repeats=5,\n",
+    ")\n",
+    "\n",
+    "print(\"CSV enregistré dans :\", csv_path)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
